<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimalActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="back"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/goat"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/goat" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/goat"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/sky_blue"
        app:layout_constraintEnd_toStartOf="@id/volume"
        app:layout_constraintTop_toBottomOf="@id/goat" />

    <ImageView
        android:id="@+id/volume"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="70dp"
        android:onClick="noise"
        app:layout_constraintEnd_toEndOf="@id/goat"
        app:layout_constraintTop_toBottomOf="@id/goat"
        app:srcCompat="@drawable/volume" />

    <TextView
        android:id="@+id/goatFact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:text="@string/goat_fun"
        android:textColor="@color/sky_blue"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>